added mission and event page

--- a/index.html
+++ b/index.html
@@ -34,40 +34,31 @@
     <!-- Nav -->
     <nav id="nav">
         <ul class="container">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#mission">Mission</a></li>
             <li><a href="#events">Events</a></li>
-            <li><a href="#find">Find Us</a></li>
+            <li><a href="#forums">Forums</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#purchase">Bulk Purchase</a></li>
+            <li><a href="#members">Members</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
-    <!-- Home -->
+    <!-- Mission -->
     <div class="wrapper style1 first">
-        <article class="container" id="home">
+        <article class="container" id="mission">
+            <header>
+                <h2>Wisconsin Cider Guild</h2>
+                <span class="image fit"><img src="images/background.png" alt=""/></span>
+            </header>
             <div class="row">
                 <div class="12u 12u(mobile)">
-                    <span class="image fit"><img src="images/background.jpg" alt=""/></span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="6u 12u(mobile)">
-                    <header>
-                        <p>We have been producing juice for over ten years and cider (7% ABV) for six.  Our orchard is nearly thirty years old.  We planted our first trees when we moved here.  It has been an adventure.</p>
-                        <p>Our trees have come from over a dozen different nurseries in as many states as we attempted to find the best representatives of cider apples.  We have employed numerous people of varied talents in our efforts over the years.  Our lives are richer as a result.</p>
-                        <p>We're constantly improving our products.  We’re one of the few Wisconsin makers who have our own orchard, pressing facility and ferment our own cider.  We’re also definitely a “craft” cider, not fancy; simply the best taste.</p>
-                    </header>
-                </div>
-                <div class="6u 12u(mobile)">
-                    <div class="fb-page" data-href="https://www.facebook.com/CiderHouseWI"
-                         data-tabs="timeline"
-                         data-width="500"
-                         data-height="500"
-                         data-small-header="true"
-                         data-adapt-container-width="true"
-                         data-hide-cover="true"
-                         data-hide-cta="true"
-                         data-show-facepile="false">
-                    </div>
+                    <h2>Mission Statement</h2>
+                    <ul>
+                        <li>We showcase Wisconsin apples</li>
+                        <li>We are a non profit</li>
+                        <li>We serve both commercial and non-commercial cider producers</li>
+                    </ul>
                 </div>
             </div>
         </article>
@@ -81,8 +72,8 @@
             </header>
             <div class="container">
                 <div class="row">
-                    <div id="events" class="12u 12u(mobile)">
-                        <div class="fb-page" data-href="https://www.facebook.com/CiderHouseWI"
+                    <div class="12u 12u(mobile)">
+                        <div class="fb-page" data-href="https://www.facebook.com/WisconsinCiderHouse"
                              data-tabs="events"
                              data-width="500"
                              data-height="600"
