enable CNAME entry, fix event page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="container">
                 <div class="row">
                     <div class="12u 12u(mobile)">
-                        <div class="fb-page" data-href="https://www.facebook.com/WisconsinCiderHouse"
+                        <div class="fb-page" data-href="https://www.facebook.com/Wisconsin-Cider-Guild-1997705110549321"
                              data-tabs="events"
                              data-width="500"
                              data-height="600"
