--- a/index.html
+++ b/index.html
@@ -89,45 +89,39 @@
         </article>
     </div>
 
-    <!-- Find Us -->
-    <div class="wrapper style3">
-        <article id="find">
+    <!-- Forums -->
+    <div class="wrapper style4">
+        <article id="forums" class="container 75%">
             <header>
-                <h2>Find Us</h2>
-                <p>Retail and draft locations</p>
+                Forums - TODO
             </header>
-            <div class="container">
-                <div class="row">
-                    <div class="4u 12u(mobile)">
-                        <section class="box">
-                            CORK 'N BOTTLE<br/>
-                            <a class="address" target="_blank" href="https://www.google.com/maps/place/Cork+'n+Bottle/@43.084245,-89.3784189,17z/data=!3m1!4b1!4m5!3m4!1s0x88065368ec747605:0xbb2a070acbed31d7!8m2!3d43.084245!4d-89.3762302">
-                                855 E JOHNSON ST.<br />MADISON, WI 53703
-                            </a>
-                        </section>
-                    </div>
-                    <div class="4u 12u(mobile)">
-                        <section class="box">
-                            UNDERGROUND BUTCHER<br/>
-                            <a class="address" target="_blank" href="https://www.google.com/maps/place/Underground+Butcher/@43.0783884,-89.3731409,17z/data=!3m1!4b1!4m5!3m4!1s0x8806536d7612e7d7:0xb8466287c96aa6e1!8m2!3d43.0783884!4d-89.3709522">
-                                811 WILLIAMSON ST.<br/>MADISON, WI 53703
-                            </a>
-                        </section>
-                    </div>
-                    <div class="4u 12u(mobile)">
-                        <section class="box">
-                            FOREQUARTER<br/>
-                            <a class="address" target="_blank" href="https://www.google.com/maps/place/Forequarter/@43.0822385,-89.3817482,17z/data=!3m1!4b1!4m5!3m4!1s0x88065342750f29f1:0xb06b4067fd78778e!8m2!3d43.082272!4d-89.379636">
-                                708 1/4 E JOHNSON ST.<br/>MADISON, WI 53703
-                            </a>
-                        </section>
-                    </div>
-                </div>
-            </div>
-            <footer>
-                <p>If you are interested in selling our product and appearing on this list, please contact us below:</p>
-                <a href="#contact" class="button big scrolly">Contact Us</a>
-            </footer>
+        </article>
+    </div>
+
+    <!-- Education -->
+    <div class="wrapper style4">
+        <article id="education" class="container 75%">
+            <header>
+                Education - TODO
+            </header>
+        </article>
+    </div>
+
+    <!-- Bulk Purchase -->
+    <div class="wrapper style4">
+        <article id="purchase" class="container 75%">
+            <header>
+                Bulk Purchase - TODO
+            </header>
+        </article>
+    </div>
+
+    <!-- Members -->
+    <div class="wrapper style4">
+        <article id="members" class="container 75%">
+            <header>
+                Members - TODO
+            </header>
         </article>
     </div>
 
@@ -136,12 +130,9 @@
         <article id="contact" class="container 75%">
             <header>
                 <h2>Contact Us</h2>
-                <h3>Sales and customer service</h3>
                 <p><a href="mailto:wciderhouse@gmail.com">wciderhouse@gmail.com</a> | 608-213-7396</p>
-                <br />
                 <ul class="social">
-                    <li><a target="_blank" href="https://www.facebook.com/CiderHouseWI" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a target="_blank" href="https://www.twitter.com/CiderHouseWI" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/Wisconsin-Cider-Guild-1997705110549321" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                 </ul>
             </header>
             <footer>
