--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <article id="contact" class="container 75%">
             <header>
                 <h2>Contact Us</h2>
-                <p><a href="mailto:wciderhouse@gmail.com">wciderhouse@gmail.com</a> | 608-213-7396</p>
+                <p><a href="mailto:jlcider@gmail.com">jlcider@gmail.com</a> | 608-838-6797</p>
                 <ul class="social">
                     <li><a target="_blank" href="https://www.facebook.com/Wisconsin-Cider-Guild-1997705110549321" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                 </ul>
