added home page and fb posts

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- Nav -->
     <nav id="nav">
         <ul class="container">
+            <li><a href="#home">Home</a></li>
             <li><a href="#mission">Mission</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#forums">Forums</a></li>
@@ -44,13 +45,33 @@
         </ul>
     </nav>
 
-    <!-- Mission -->
+    <!-- Home -->
     <div class="wrapper style1 first">
-        <article class="container" id="mission">
+        <article class="container" id="home">
             <header>
                 <h2>Wisconsin Cider Guild</h2>
                 <span class="image fit"><img src="images/background.png" alt=""/></span>
             </header>
+            <div class="row">
+                <div class="12u 12u(mobile)">
+                    <div class="fb-page" data-href="https://www.facebook.com/Wisconsin-Cider-Guild-1997705110549321"
+                         data-tabs="timeline"
+                         data-width="500"
+                         data-height="500"
+                         data-small-header="true"
+                         data-adapt-container-width="true"
+                         data-hide-cover="true"
+                         data-hide-cta="true"
+                         data-show-facepile="false">
+                    </div>
+                </div>
+            </div>
+        </article>
+    </div>
+
+    <!-- Mission -->
+    <div class="wrapper style1 first">
+        <article class="container" id="mission">
             <div class="row">
                 <div class="12u 12u(mobile)">
                     <h2>Mission Statement</h2>
